--- a/src/css/vertical-layout-light/Jotlink.scss
+++ b/src/css/vertical-layout-light/Jotlink.scss
@@ -42,6 +42,7 @@
   background: linear-gradient(270deg,#dc143c,#dc143c 99.97%);
   position: fixed;
   z-index: 1000;
+  padding: 2px;
 }
 .jot-link {
 	padding: 1rem 2rem 1.15rem;
