--- a/src/css/vertical-layout-light/_allform.scss
+++ b/src/css/vertical-layout-light/_allform.scss
@@ -371,6 +371,10 @@ color: red;
     .sidebar-wrapper2{
         width: 536px !important;
     }
+    .builder-sidebar_scroll {
+        background: #dc143c;
+        width: 535px !important;
+    }
     // .setting_form_ml{
     //     margin-left: 27% !important;
     // }
