--- a/src/css/vertical-layout-light/_navbar.scss
+++ b/src/css/vertical-layout-light/_navbar.scss
@@ -30,9 +30,17 @@ margin-right: 2px;
 }
 .profile_margin {
     margin-top: 10%;
+    padding: 2%;
 }
 
 .icon_width{
     position: static !important;
     width: 0% !important;
+    padding-left: 150%;
 }
+.border_right {
+    border-right: 1px solid gray;
+  }
+  .set_margin_left{
+    margin-left: 5%;
+  }
