register input field

--- a/src/css/vertical-layout-light/_navbar.scss
+++ b/src/css/vertical-layout-light/_navbar.scss
@@ -36,7 +36,7 @@ margin-right: 2px;
 .icon_width{
     position: static !important;
     width: 0% !important;
-    padding-left: 200%;
+    padding-left: 30px;
 }
 .border_right {
     border-right: 1px solid gray;
