create form analytics page

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,5 +6,6 @@
 @import './css/vertical-layout-light/jotform';
 @import './css/vertical-layout-light/Jotlink.scss';
 @import './css/vertical-layout-light/setting';
-@import './css//vertical-layout-light/Preview'
+@import './css//vertical-layout-light/Preview';
+@import './css/vertical-layout-light/_formanalytics.scss';
 
