--- a/src/App.scss
+++ b/src/App.scss
@@ -8,4 +8,5 @@
 @import './css/vertical-layout-light/setting';
 @import './css//vertical-layout-light/Preview';
 @import './css/vertical-layout-light/_formanalytics.scss';
+@import './css/vertical-layout-light/personaldetails';
 
