change route of payment package

--- a/src/css/vertical-layout-light/_formanalytics.scss
+++ b/src/css/vertical-layout-light/_formanalytics.scss
@@ -48,3 +48,7 @@
 //   color: lightgrey !important;
 //   width: 100% !important;
 // }
+.table_color{
+   background-color: #232227;
+  color: #fff;
+}
