--- a/src/css/vertical-layout-light/_personaldetails.scss
+++ b/src/css/vertical-layout-light/_personaldetails.scss
@@ -5,3 +5,11 @@
     border: 1px solid gray;
     border-radius: 5px !important;
 }
+.card_center{
+    margin: 0 auto; 
+    float: none; 
+    margin-bottom: 10px; 
+}
+.margin_btn_sm{
+    margin-left: 25%;
+}
