--- a/src/css/vertical-layout-light/_allform.scss
+++ b/src/css/vertical-layout-light/_allform.scss
@@ -418,10 +418,11 @@ color: red;
     color: #616161 !important;
 }
 .form_padding{
-    padding-left: 30px !important;
+    padding-left: 15px !important;
 }
 .btn_height{
     height: 44px;
+    border-radius: 0px!important
 }
 
 /* search button color css changes on inbox page */
@@ -436,3 +437,20 @@ color: red;
 .remove_overlap{
     z-index: 5;
 }
+.inbox_search{
+padding: 14px 10px !important;
+}
+
+.btn_down{
+    background-color: #dc143c;
+    border: none;
+    color: white;
+    padding: 5px 10px;
+    cursor: pointer;
+    font-size: 14px;
+    margin-left: 30px;
+  }
+  
+  .btn_down:hover {
+    background-color: #f52b54;
+  }
