--- a/src/css/vertical-layout-light/_navbar.scss
+++ b/src/css/vertical-layout-light/_navbar.scss
@@ -17,9 +17,9 @@ color: #fff;
 .display_flex{
     display: flex;
 }
-.react-datepicker__input-container input{
-    width: 85% !important;
-}
+// .react-datepicker__input-container input{
+//     width: 85% !important;
+// }
 /* previewNav css*/
 .resizedTextbox {
     // width: 350px; 
