--- a/src/css/vertical-layout-light/_Register.scss
+++ b/src/css/vertical-layout-light/_Register.scss
@@ -280,4 +280,9 @@ color: black;
 }
 .euro_size{
     font-size: 25px;
+    height: 34px;
+}
+.input_height_register{
+    height: 0.75rem !important;
+    padding: 1rem 0.75rem !important;
 }
