--- a/src/css/vertical-layout-light/_allform.scss
+++ b/src/css/vertical-layout-light/_allform.scss
@@ -454,3 +454,15 @@ padding: 14px 10px !important;
   .btn_down:hover {
     background-color: #f52b54;
   }
+//   .inbox-equal-width{
+//     padding-left: 19px!important;
+//     padding-right: 19px !important;
+//   }
+//   .archive-equal-width{
+//     padding-left: 12px!important;
+//     padding-right: 12px !important;
+//   }
+//   .trash-equal-width{
+//     padding-left: 20px!important;
+//     padding-right: 20px !important;
+//   }
