--- a/src/css/vertical-layout-light/_Login.scss
+++ b/src/css/vertical-layout-light/_Login.scss
@@ -108,3 +108,13 @@
     width: 78%;
     margin: 7.5rem auto;
 }
+@media screen and (min-device-width: 1441px) and (max-device-width: 3840px) {
+    .spinner_size{
+      width: 7rem !important;
+      height: 7rem !important;
+  }
+  .font_spinner{
+    font-size: 25px !important;
+  }
+    }
+  
