--- a/src/css/vertical-layout-light/_setting.scss
+++ b/src/css/vertical-layout-light/_setting.scss
@@ -652,7 +652,7 @@
   }
 
   .thankyou-radio{
-    width: 55%;
+    width: 100%;
     box-shadow: 0 2px 2px rgb(87 100 126 / 21%);
     // background-color: #ffffff;
     padding: 12px 7px 31px 14px;
@@ -905,3 +905,14 @@ background-color: #78BB07;
     .input_date{
       padding-left: 20px !important;
     }
+
+    .condition-div {
+      width: 100%;
+      background: #ffffff;
+      border: 1px solid #f2f2f2;
+      border-radius: 4px;
+      box-shadow: inset 0 0 1px 0 #bfbfbf;
+  }
+  .width_show_field{
+    width: 95%;
+  }
