--- a/src/App.css
+++ b/src/App.css
@@ -217,3 +217,101 @@
     display: none !important;
   }
   
+  
+/* Rajat 12-10-2022 */
+.list-group-item {
+  background-color: #f52b54 !important;
+}
+
+.login-button-color {
+  background-color: #dc143c !important;
+  border-radius: 4px !important;
+}
+
+.login-button-color:hover {
+  background-color: #f52b54 !important;
+  border-radius: 4px !important;
+}
+.select-button-color {
+  background-color: #dc143c !important;
+  color: #fff !important;
+}
+
+.select-button-color:hover {
+  background-color: #f52b54 !important;
+  color: #fff !important;
+}
+
+.register-business-input{
+  display: inline-flex !important; 
+}
+.business-search-button{
+  margin-left: 20px !important;
+}
+
+.shadow-md {
+  box-shadow: 0px 5px 10px rgba(90, 116, 148, 0.3);
+}
+.navbar{
+border-radius: 5px;
+}
+.sidebar{
+  width: 280px;
+  min-height: 100vh;
+  box-shadow: 0px 4px 8px rgb(0 0 0 / 16%);
+  background-color: #fff;
+  position: fixed;
+  top: 0;
+  left: -100%;
+  z-index: 1;
+  transition: 0.5s;
+}
+.sidebar.active{
+  left: 0;
+}
+.sd-header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px;
+}
+.sidebar-overlay{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.4);
+  transition: 0.5s;
+  opacity: 0;
+  visibility: hidden;
+}
+.sidebar-overlay.active{
+  opacity: 1;
+  visibility: visible;
+}
+.sd-body{
+  padding: 15px;
+  max-height: calc(100vh - 67px);
+  overflow-x: hidden;
+}
+.sd-body ul{
+  display: inline-block;
+  width: 100%;
+  margin-bottom: 0;
+  padding: 0;
+}
+.sd-body ul li{
+  list-style: none;
+  margin-bottom: 8px;
+}
+.sd-body ul li .sd-link{
+  display: inline-block;
+  width: 100%;
+  padding: 10px 16px;
+  color: #475f7b;
+  background-color: #e5e8ec;
+  border-radius: 4px;
+  cursor: pointer;
+  text-decoration: none;
+}
