--- a/src/App.scss
+++ b/src/App.scss
@@ -10,3 +10,6 @@
 @import './css/vertical-layout-light/_formanalytics.scss';
 @import './css/vertical-layout-light/personaldetails';
 
+a:hover{
+    text-decoration: none !important;
+}
