--- a/src/css/vertical-layout-light/_setting.scss
+++ b/src/css/vertical-layout-light/_setting.scss
@@ -651,7 +651,7 @@ margin-left: 309px;
   padding: 12px;
   padding-right: 25px;
   padding-left: 25px;
-  margin-left: 190px;
+  // margin-left: 190px;
 }
 
 .thankyou-radio{
@@ -908,3 +908,37 @@ background-color: #78BB07;
   .input_date{
     padding-left: 20px !important;
   }
+  .condition_margin_adjust{
+    margin: 105px 0px 0px 220px;
+  }
+  .condition-first-input {
+    width: 100%;
+    border: 1px solid #c5c5c5;
+    border-radius: 4px !important;
+    padding: 6px 365px 6px 0px;
+    box-shadow: 0 2px 4px rgb(86 70 50 / 10%);
+    border: 1px solid #d9cec1;
+    color: #564632;
+    font-family: inherit;
+    line-height: 24px;
+    font-size: 14px;
+    display: inline-block;
+    background-color: #fff;
+    outline: 0;
+}
+
+.condition-sec-input {
+  width: 100%;
+  border: 1px solid #c5c5c5;
+  border-radius: 4px !important;
+  padding: 6px 306px 6px 0px;
+  box-shadow: 0 2px 4px rgb(86 70 50 / 10%);
+  border: 1px solid #d9cec1;
+  color: #564632;
+  font-family: inherit;
+  line-height: 24px;
+  font-size: 14px;
+  display: inline-block;
+  background-color: #fff;
+  outline: 0;
+}
