--- a/src/css/vertical-layout-light/_Register.scss
+++ b/src/css/vertical-layout-light/_Register.scss
@@ -128,7 +128,7 @@ input {
     border: 1px solid white;
 }
 .search-input-div {
-    width: 41%;
+    width: 71%;
     font-family: 'Montserrat', sans-serif;
 }
 .already-login{
@@ -288,4 +288,8 @@ color: black;
 }
 .para_col{
     color:#dc143c;
+}
+.search-pay-div {
+    /* width: 71%; */
+    font-family: "Montserrat", sans-serif;
 }
