--- a/src/css/vertical-layout-light/_setting.scss
+++ b/src/css/vertical-layout-light/_setting.scss
@@ -2,27 +2,35 @@
   0% {
     transform: rotate(0deg);
   }
+
   10% {
     transform: rotate(10deg);
   }
+
   30% {
     transform: rotate(0deg);
   }
+
   40% {
     transform: rotate(-10deg);
   }
+
   50% {
     transform: rotate(0deg);
   }
+
   60% {
     transform: rotate(5deg);
   }
+
   70% {
     transform: rotate(0deg);
   }
+
   80% {
     transform: rotate(-5deg);
   }
+
   100% {
     transform: rotate(0deg);
   }
@@ -33,17 +41,20 @@
     transform: scale(0.9);
     opacity: 1;
   }
+
   100% {
     transform: scale(2);
     opacity: 0;
   }
 }
+
 body {
   font-size: 0.9rem;
 }
+
 .page-wrapper .sidebar-wrapper2,
-.sidebar-wrapper2 .sidebar-brand > a,
-.sidebar-wrapper2 .sidebar-dropdown > a:after,
+.sidebar-wrapper2 .sidebar-brand>a,
+.sidebar-wrapper2 .sidebar-dropdown>a:after,
 .sidebar-wrapper2 .sidebar-menu .sidebar-dropdown .sidebar-submenu li a:before,
 .sidebar-wrapper2 ul li a i,
 .page-wrapper .page-content,
@@ -84,19 +95,23 @@ body {
   padding: 12px;
   background: #dc143c;
 }
-.page-content{
+
+.page-content {
   height: 100%;
 }
-.setting-email{
+
+.setting-email {
   height: 100vh;
 }
+
 @media screen and (min-width: 768px) {
   .page-wrapper.toggled .page-content {
     padding-left: 300px;
     top: 45px;
-    position: absolute;
+    // position: absolute;
   }
 }
+
 /*----------------show sidebar button----------------*/
 #show-sidebar {
   position: fixed;
@@ -107,17 +122,21 @@ body {
   width: 35px;
   transition-delay: 0.3s;
 }
+
 .page-wrapper.toggled #show-sidebar {
   left: -40px;
 }
+
 /*----------------sidebar-wrapper----------------*/
-.moreoption-open{
+.moreoption-open {
   display: flex;
 }
-.moreoption-close{
+
+.moreoption-close {
   display: none;
 }
-.more-dropdownmenu{
+
+.more-dropdownmenu {
   position: absolute;
   padding: 0;
   margin: 0;
@@ -170,7 +189,7 @@ body {
   align-items: center;
 }
 
-.sidebar-wrapper2 .sidebar-brand > a {
+.sidebar-wrapper2 .sidebar-brand>a {
   text-transform: uppercase;
   font-weight: bold;
   flex-grow: 1;
@@ -180,6 +199,7 @@ body {
   cursor: pointer;
   font-size: 20px;
 }
+
 /*--------------------sidebar-header----------------------*/
 
 .sidebar-wrapper2 .sidebar-header {
@@ -206,7 +226,7 @@ body {
   float: left;
 }
 
-.sidebar-wrapper2 .sidebar-header .user-info > span {
+.sidebar-wrapper2 .sidebar-header .user-info>span {
   display: block;
 }
 
@@ -227,7 +247,7 @@ body {
 
 /*-----------------------sidebar-search------------------------*/
 
-.sidebar-wrapper2 .sidebar-search > div {
+.sidebar-wrapper2 .sidebar-search>div {
   padding: 10px 20px;
 }
 
@@ -265,6 +285,7 @@ body {
   text-align: center;
   border-radius: 4px;
 }
+
 .sidebar-wrapper2 .sidebar-menu ul li a i {
   margin-right: 10px;
   font-size: 12px;
@@ -275,15 +296,17 @@ body {
   border-radius: 4px;
 }
 
-.sidebar-wrapper2 .sidebar-menu ul li a:hover > .i::before {
+.sidebar-wrapper2 .sidebar-menu ul li a:hover>.i::before {
   display: inline-block;
   animation: swing ease-in-out 0.5s 1 alternate;
 }
-.sidebar-wrapper2 .sidebar-menu ul li a:hover > i::before {
+
+.sidebar-wrapper2 .sidebar-menu ul li a:hover>i::before {
   display: inline-block;
   animation: swing ease-in-out 0.5s 1 alternate;
 }
-.sidebar-wrapper2 .sidebar-menu .sidebar-dropdown > a:after {
+
+.sidebar-wrapper2 .sidebar-menu .sidebar-dropdown>a:after {
   font-family: 'Montserrat', sans-serif;
   font-weight: 900;
   content: "\f105";
@@ -312,25 +335,31 @@ body {
 
 
 }
-.list-sidebar-jotform{
+
+.list-sidebar-jotform {
   border-bottom: 1px solid #3a3f48 !important;
-  
+
   margin: auto;
   margin-top: 5px;
 }
-.list-sidebarjotform{
+
+.list-sidebarjotform {
   background: #616161 !important;
 }
-.list-sidebar-focus{
-  background-color: #f52b54 ;
+
+.list-sidebar-focus {
+  background-color: #f52b54;
 }
-.list-sidebar-jotform[aria-expanded="true"]{
-background-color: #f52b54  !important;
-color: #ffffff !important;
+
+.list-sidebar-jotform[aria-expanded="true"] {
+  background-color: #f52b54 !important;
+  color: #ffffff !important;
 }
-#flexSwitchCheckChecked{
+
+#flexSwitchCheckChecked {
   margin-top: -12px !important;
 }
+
 .sidebar-wrapper2 .sidebar-menu .sidebar-dropdown .sidebar-submenu li a:before {
   content: "\f111";
   font-family: 'Montserrat', sans-serif;
@@ -344,16 +373,20 @@ color: #ffffff !important;
   margin-right: 10px;
   font-size: 8px;
 }
-.svg-position{
-position: relative; 
-left: 8px;
+
+.svg-position {
+  position: relative;
+  left: 8px;
 }
-.formpage_item .form-switch{
-margin-top: -12px;
+
+.formpage_item .form-switch {
+  margin-top: -12px;
 }
-.formlink .dropdown-toggle::after{
-display: none;
+
+.formlink .dropdown-toggle::after {
+  display: none;
 }
+
 .sidebar-wrapper2 .sidebar-menu ul li a span.label,
 .sidebar-wrapper2 .sidebar-menu ul li a span.badge {
   float: right;
@@ -371,7 +404,7 @@ display: none;
   display: none;
 }
 
-.sidebar-wrapper2 .sidebar-menu .sidebar-dropdown.active > a:after {
+.sidebar-wrapper2 .sidebar-menu .sidebar-dropdown.active>a:after {
   transform: rotate(90deg);
   right: 17px;
 }
@@ -385,7 +418,7 @@ display: none;
   display: flex;
 }
 
-.sidebar-footer > a {
+.sidebar-footer>a {
   flex-grow: 1;
   text-align: center;
   height: 30px;
@@ -393,7 +426,7 @@ display: none;
   position: relative;
 }
 
-.sidebar-footer > a .notification {
+.sidebar-footer>a .notification {
   position: absolute;
   top: 0;
 }
@@ -430,7 +463,7 @@ display: none;
   padding-top: 20px;
 }
 
-.page-wrapper .page-content > div {
+.page-wrapper .page-content>div {
   padding: 20px 40px;
 }
 
@@ -444,32 +477,40 @@ display: none;
   width: 5px;
   height: 7px;
 }
+
 ::-webkit-scrollbar-button {
   width: 0px;
   height: 0px;
 }
+
 ::-webkit-scrollbar-thumb {
   background: #525965;
   border: 0px none #ffffff;
   border-radius: 0px;
 }
+
 ::-webkit-scrollbar-thumb:hover {
   background: #525965;
 }
+
 ::-webkit-scrollbar-thumb:active {
   background: #525965;
 }
+
 ::-webkit-scrollbar-track {
   background: transparent;
   border: 0px none #ffffff;
   border-radius: 50px;
 }
+
 ::-webkit-scrollbar-track:hover {
   background: transparent;
 }
+
 ::-webkit-scrollbar-track:active {
   background: transparent;
 }
+
 ::-webkit-scrollbar-corner {
   background: transparent;
 }
@@ -489,8 +530,8 @@ display: none;
 
 .chiller-theme .sidebar-wrapper2 .sidebar-search input.search-menu,
 .chiller-theme .sidebar-wrapper2 .sidebar-search .input-group-text {
-    border-color: transparent;
-    box-shadow: none;
+  border-color: transparent;
+  box-shadow: none;
 }
 
 .chiller-theme .sidebar-wrapper2 .sidebar-header .user-info .user-role,
@@ -500,7 +541,7 @@ display: none;
 .chiller-theme .sidebar-wrapper2 .sidebar-brand>a,
 .chiller-theme .sidebar-wrapper2 .sidebar-menu ul li a,
 .chiller-theme .sidebar-footer>a {
-    color: #818896;
+  color: #818896;
 }
 
 .chiller-theme .sidebar-wrapper2 .sidebar-menu ul li:hover>a,
@@ -508,72 +549,79 @@ display: none;
 .chiller-theme .sidebar-wrapper2 .sidebar-header .user-info,
 .chiller-theme .sidebar-wrapper2 .sidebar-brand>a:hover,
 .chiller-theme .sidebar-footer>a:hover .i,
-.chiller-theme .sidebar-footer>a:hover i{
-    color: #fff;
+.chiller-theme .sidebar-footer>a:hover i {
+  color: #fff;
 }
 
 .page-wrapper.chiller-theme.toggled #close-sidebar {
-    color: #bdbdbd;
+  color: #bdbdbd;
 }
 
 .page-wrapper.chiller-theme.toggled #close-sidebar:hover {
-    color: #ffffff;
+  color: #ffffff;
 }
 
 .chiller-theme .sidebar-wrapper2 ul li:hover a .i,
 .chiller-theme .sidebar-wrapper2 ul li:hover a i,
 .chiller-theme .sidebar-wrapper2 .sidebar-dropdown .sidebar-submenu li a:hover:before,
 .chiller-theme .sidebar-wrapper2 .sidebar-search input.search-menu:focus+span,
-.chiller-theme .sidebar-wrapper2 .sidebar-menu .sidebar-dropdown.active a i ,
+.chiller-theme .sidebar-wrapper2 .sidebar-menu .sidebar-dropdown.active a i,
 .chiller-theme .sidebar-wrapper2 .sidebar-menu .sidebar-dropdown.active a .i {
-    color: #16c7ff;
-    text-shadow:0px 0px 10px rgba(22, 199, 255, 0.5);
+  color: #16c7ff;
+  text-shadow: 0px 0px 10px rgba(22, 199, 255, 0.5);
 }
-.chiller-theme .sidebar-wrapper2 .sidebar-menu ul li a i{
+
+.chiller-theme .sidebar-wrapper2 .sidebar-menu ul li a i {
   color: #fff;
 }
-.chiller-theme .sidebar-wrapper2 .sidebar-menu ul li a .i{
+
+.chiller-theme .sidebar-wrapper2 .sidebar-menu ul li a .i {
   color: #fff;
 }
-.jotform-sidebar{
-    display: flex;
-    align-items: center;
-    
-    // justify-content: space-around;
+
+.jotform-sidebar {
+  display: flex;
+  align-items: center;
+
+  // justify-content: space-around;
 }
+
 .chiller-theme .sidebar-wrapper2 .sidebar-menu .sidebar-dropdown div,
 .chiller-theme .sidebar-wrapper2 .sidebar-search input.search-menu,
 .chiller-theme .sidebar-wrapper2 .sidebar-search .input-group-text {
-    background: #3a3f48;
+  background: #3a3f48;
 }
-.sidebars-name{
+
+.sidebars-name {
   font-size: 1rem;
   text-transform: uppercase;
   color: #ffffff !important;
   padding-bottom: 20px;
 }
+
 .chiller-theme .sidebar-wrapper2 .sidebar-menu .header-menu span {
-    color: #fff;
+  color: #fff;
 }
 
 .chiller-theme .sidebar-footer {
-    background: #3a3f48;
-    box-shadow: 0px -1px 5px #282c33;
-    border-top: 1px solid #464a52;
+  background: #3a3f48;
+  box-shadow: 0px -1px 5px #282c33;
+  border-top: 1px solid #464a52;
 }
 
 .chiller-theme .sidebar-footer>a:first-child {
-    border-left: none;
+  border-left: none;
 }
 
 .chiller-theme .sidebar-footer>a:last-child {
-    border-right: none;
+  border-right: none;
 }
-.setting-form{
+
+.setting-form {
   padding: 104px 111px !important;
 }
 
-.form-setting-icon{
+.form-setting-icon {
   width: 39px;
   padding: 7px;
   text-align: center;
@@ -581,7 +629,8 @@ display: none;
   color: white;
   border-radius: 3px;
 }
-.form-setting-icon1{
+
+.form-setting-icon1 {
   width: 39px;
   padding: 7px;
   text-align: center;
@@ -589,24 +638,28 @@ display: none;
   color: white;
   border-radius: 3px;
 }
-.form-setting-div{
+
+.form-setting-div {
   display: flex;
 }
-.form-setting-right-div{
+
+.form-setting-right-div {
   padding-left: 12px;
   padding-top: 1px;
   margin-left: 190px;
 }
 
-.form-setting-h1{
+.form-setting-h1 {
   font-size: 18px;
   margin-bottom: 0;
 }
-.form-setting-p{
+
+.form-setting-p {
   font-size: 14px;
   margin-top: 2px;
 }
-.form-setting-main-div{
+
+.form-setting-main-div {
   width: 69%;
   background: #ffffff;
   border: 1px solid #f2f2f2;
@@ -614,17 +667,20 @@ display: none;
   box-shadow: inset 0 0 1px 0 #bfbfbf;
   margin-left: 190px;
 }
-.form-setting-title{
+
+.form-setting-title {
   font-size: 19px;
   margin-bottom: 2px;
 }
-.form-setting-para{
+
+.form-setting-para {
   font-size: 14px;
 }
-.form-setting-input{
+
+.form-setting-input {
   width: 100%;
   border: 1px solid #c5c5c5;
-  border-radius: 4px!important;
+  border-radius: 4px !important;
   padding: 6px 12px;
   box-shadow: 0 2px 4px rgb(86 70 50 / 10%);
   border: 1px solid #d9cec1;
@@ -636,14 +692,17 @@ display: none;
   background-color: #fff;
   outline: 0;
 }
-.mainsetting-div{
+
+.mainsetting-div {
   padding: 12px 27px 12px 26px;
 }
-.setting_form_ml{
-margin-left: 309px;
-// height: 100vh;
+
+.setting_form_ml {
+  margin-left: 309px !important;
+  // height: 100vh;
 }
-.show-more-btn{
+
+.show-more-btn {
   background: #dc143c;
   border: 1px solid #dc143c;
   color: #fff;
@@ -654,23 +713,27 @@ margin-left: 309px;
   margin-left: 190px;
 }
 
-.thankyou-radio{
-  width: 55%;
+.thankyou-radio {
+  width: 100%;
   box-shadow: 0 2px 2px rgb(87 100 126 / 21%);
   // background-color: #ffffff;
   padding: 12px 7px 31px 14px;
 }
-.ml_contain{
+
+.ml_contain {
   margin-left: 80px;
 }
-.big_div{
+
+.big_div {
   background-color: #c71d38;
   border-radius: 5px;
-  }
-  .col_6{
-    width: 700px;
-  }
-.class_i{
+}
+
+.col_6 {
+  width: 700px;
+}
+
+.class_i {
   background-color: white;
   height: 30px;
   width: 30px;
@@ -680,13 +743,15 @@ margin-left: 309px;
   align-items: center;
   justify-content: center;
 }
-.font_comb{
+
+.font_comb {
   padding-left: 10px;
   display: flex;
   align-items: center;
 
 }
-.class_g{
+
+.class_g {
   background-color: green;
   height: 40px;
   width: 40px;
@@ -696,215 +761,296 @@ margin-left: 309px;
   margin-top: 30px;
 }
 
-.paragraph{
+.paragraph {
   font-size: 13px;
 }
-.map{
+
+.map {
   margin-left: 14px;
 }
-.pb{
+
+.pb {
   color: #78bb07;
   font-weight: 500;
   padding-left: 6px;
 }
-.border_width{
-width: 130px;
+
+.border_width {
+  width: 130px;
 }
-.link{
-margin-right: 12px;
+
+.link {
+  margin-right: 12px;
 }
-.setting{
-color: #4573e3;
-margin-left: 8px;
+
+.setting {
+  color: #4573e3;
+  margin-left: 8px;
 }
-._border{
-height: 1px;
-margin-top:30px ;
+
+._border {
+  height: 1px;
+  margin-top: 30px;
 }
-.font{
-font-size: 12px;
-width: 360px;   
+
+.font {
+  font-size: 12px;
+  width: 360px;
 }
-.parlanch{
-margin-left: 20px;
+
+.parlanch {
+  margin-left: 20px;
 }
+
 //  .quick{
 //   margin-left: 20px;
 //  }
-.share{
-margin-left: 10px;
+.share {
+  margin-left: 10px;
 }
-.font_r{
-font-size: 12px;
+
+.font_r {
+  font-size: 12px;
 }
-.sidebar-wrapper2 .sidebar-menu ul li a{
-padding: 0px;
+
+.sidebar-wrapper2 .sidebar-menu ul li a {
+  padding: 0px;
 
 }
-.i_form{
-width: 490px;
+
+.i_form {
+  width: 490px;
 }
-.remider{
-margin: 0px !important;
+
+.remider {
+  margin: 0px !important;
 }
-.jotlogo-header{
-width: 20%;
+
+.jotlogo-header {
+  width: 20%;
   padding-top: 4px;
   background: #ffff;
   padding: 6px;
 }
-.jotlogo-width{
-width: 286px;
-background:#F4F5F7;
+
+.jotlogo-width {
+  width: 286px;
+  background: #F4F5F7;
 
 }
-.preview-div-switch{
-width: 182px;
-margin-left: 57px;
+
+.preview-div-switch {
+  width: 182px;
+  margin-left: 57px;
 }
-.link_c{
-left: 10px;
-top: 10px;
+
+.link_c {
+  left: 10px;
+  top: 10px;
 }
-.copy_button{
-margin-left: 10px;
+
+.copy_button {
+  margin-left: 10px;
 }
-.selected_div{
-background-color: #A0ABB2;
-height: 28px;
-width: 55px;
-border-radius: 20px;
+
+.selected_div {
+  background-color: #A0ABB2;
+  height: 28px;
+  width: 55px;
+  border-radius: 20px;
 
 }
-.abs_div{
-background-color: white;
-height: 33px;
-width: 33px;
-border-radius: 100%;
-left: -5px;
-top: -2px;
+
+.abs_div {
+  background-color: white;
+  height: 33px;
+  width: 33px;
+  border-radius: 100%;
+  left: -5px;
+  top: -2px;
 }
-.form-control{
-padding-left: 40px;
+
+.form-control {
+  padding-left: 40px;
 }
-.accordian{
-background-color: blue;
-border-color: blue;
-border-radius: 100%;
+
+.accordian {
+  background-color: blue;
+  border-color: blue;
+  border-radius: 100%;
 }
-.heading{
+
+.heading {
   color: #4811df;
   margin-left: 5px;
 }
-.succes{
+
+.succes {
   background-color: #ff8a36;
   height: 90px;
 }
-.background{
+
+.background {
   background-color: #ff8a36;
- 
+
 }
-.standard{
+
+.standard {
   background-color: #fafafa;
 }
-.ut{
+
+.ut {
   height: 90px;
 }
-.bg_succes{
-background-color: #78BB07;
+
+.bg_succes {
+  background-color: #78BB07;
 }
-.autom{
+
+.autom {
   color: #78BB07;
 }
-.mat{
+
+.mat {
   font-size: 14px;
 }
-.mt{
+
+.mt {
   height: 93px;
 }
-.heading_6{
+
+.heading_6 {
   font-size: 14px;
 }
-.mainpage{
+
+.mainpage {
   display: none;
 }
-.mainpage:hover{ 
+
+.mainpage:hover {
   display: block !important;
 }
-.primar{
+
+.primar {
   background-color: #E0D7D7;
   border-radius: 100%;
 }
-.Padding_space{
+
+.Padding_space {
   padding-left: 240px;
 }
-.padd_l{
+
+.padd_l {
   padding-left: 140px;
 }
-.nav_div{
+
+.nav_div {
   background-color: #ffffff;
 }
-.text_design:hover{
-   border-bottom: 3px;
-   border-color: #4811df;
+
+.text_design:hover {
+  border-bottom: 3px;
+  border-color: #4811df;
 }
-.new_icon_3{
+
+.new_icon_3 {
   left: 96%;
   top: 10px;
-  }
-  .border-setup{
-    height: 42px;
-    width: 0.5px;
-  }
-  .conduct{
-    background-color: #0a1551;
-  }
-  .shown{
-    background-color: #09f;
-  }
-  .fs_6{
-    font-size: 12px;
-  }
-  .border_aggut{
-    padding-right: 240px;
-    padding-top: 5px!important;
-    padding-bottom: 5px!important;
-  }
-  .dropdown-center{
-    margin-left: 150px;
-  }
-  // .btn{
+}
 
-  // }
-  .css-1s2u09g-control{
-    padding-right: 200px !important;
-    padding-left: 200px !important;
-  }
-  .Main_bg:hover{
-    background-color: #09f;
-    
-  }
-  .enda{
-    background-color: #c8cced;
-    height: 20px;
-    width: 20px;
-    border-radius: 100%;
-    margin-bottom: 10px;
-  }
-  .dropi{
-   padding-left: 6px;
-   margin-bottom: 3px;
-  }
-  .enda:hover{
+.border-setup {
+  height: 42px;
+  width: 0.5px;
+}
+
+.conduct {
+  background-color: #0a1551;
+}
+
+.shown {
+  background-color: #09f;
+}
+
+.fs_6 {
+  font-size: 12px;
+}
+
+.border_aggut {
+  padding-right: 240px;
+  padding-top: 5px !important;
+  padding-bottom: 5px !important;
+}
+
+.dropdown-center {
+  margin-left: 150px;
+}
+
+// .btn{
+
+// }
+.css-1s2u09g-control {
+  padding-right: 200px !important;
+  padding-left: 200px !important;
+}
+
+.Main_bg:hover {
+  background-color: #09f;
+
+}
+
+.enda {
+  background-color: #c8cced;
+  height: 20px;
+  width: 20px;
+  border-radius: 100%;
+  margin-bottom: 10px;
+}
+
+.dropi {
+  padding-left: 6px;
+  margin-bottom: 3px;
+}
+
+.enda:hover {
   background-color: #f5f5f5;
-  }
-  /* css 01/Aug/22 */
-  .set_margin{
-    margin: 60px 0px 0px 220px;
-  }
-  // .icon_margin{
-  //   margin-left: 20px;
-  // }
-  .input_date{
-    padding-left: 20px !important;
-  }
+}
+
+/* css 01/Aug/22 */
+.set_margin {
+  margin: 60px 0px 0px 220px;
+}
+
+// .icon_margin{
+//   margin-left: 20px;
+// }
+.input_date {
+  padding-left: 20px !important;
+}
+
+.notify-btn {
+  background: #dc143c;
+  border: 1px solid #dc143c;
+  color: #fff;
+  border-radius: 4px;
+  padding: 12px;
+  padding-right: 25px;
+  padding-left: 25px;
+}
+
+.back-btn-in {
+  background: #dc143c;
+  border: 1px solid #dc143c;
+  color: #fff;
+  border-radius: 4px;
+  padding: 12px;
+  padding-right: 25px;
+  padding-left: 25px;
+}
+
+.border-dotted {
+  border: 2px dashed gray;
+}
+.thankyou-div {
+  padding-left: 12px;
+  padding-top: 1px;
+}
