--- a/src/css/vertical-layout-light/_setting.scss
+++ b/src/css/vertical-layout-light/_setting.scss
@@ -1057,3 +1057,18 @@ body {
 .date-width{
   width: 50%;
 }
+.authenticate-input {
+  width: 60%;
+  border: 1px solid #c5c5c5;
+  border-radius: 4px !important;
+  padding: 6px 12px;
+  box-shadow: 0 2px 4px rgb(86 70 50 / 10%);
+  border: 1px solid #d9cec1;
+  color: #564632;
+  font-family: inherit;
+  line-height: 24px;
+  font-size: 14px;
+  display: inline-block;
+  background-color: #fff;
+  outline: 0;
+}
