--- a/src/css/vertical-layout-light/_setting.scss
+++ b/src/css/vertical-layout-light/_setting.scss
@@ -101,7 +101,7 @@ body {
 }
 
 .setting-email {
-  height: 100vh;
+  height: 125vh;
 }
 
 @media screen and (min-width: 768px) {
@@ -467,9 +467,9 @@ body {
   padding: 20px 40px;
 }
 
-.page-wrapper .page-content {
-  overflow-x: hidden;
-}
+// .page-wrapper .page-content {
+//   overflow-x: hidden;
+// }
 
 /*------scroll bar---------------------*/
 
@@ -845,7 +845,7 @@ body {
 
 .link_c {
   left: 10px;
-  top: 10px;
+  top: 6px;
 }
 
 .copy_button {
@@ -1090,4 +1090,14 @@ body {
 }
 .time-select-width{
   width: 100%;
+}
+.form_change{
+  width: 78% !important;
+  padding: 0.375rem 1.75rem !important;
+}
+.form-control-padding{
+  padding: 0.375rem 2.75rem !important;
+}
+.page-content-padding{
+  padding-left: 48px !important;
 }
