--- a/src/css/vertical-layout-light/style.css
+++ b/src/css/vertical-layout-light/style.css
@@ -9281,7 +9281,9 @@ progress {
   font-size: 0.875em;
   color: #6c757d;
 }
-
+.container-fluid-main{
+  padding-left: 0 !important;
+}
 .container,
 .container-fluid,
 .container-sm,
@@ -13208,15 +13210,20 @@ fieldset:disabled .wizard > .actions a,
   justify-content: space-between;
 }
 
-.navbar-brand {
-  padding-top: 0.3125rem;
-  padding-bottom: 0.3125rem;
-  margin-right: 1rem;
-  font-size: 1.25rem;
-  text-decoration: none;
-  white-space: nowrap;
-}
 
+.navbar-brand {
+    display: inline-block;
+    /* padding-top: 0; */
+    /* padding-bottom: 0.3125rem; */
+    /* margin-right: 1rem; */
+    font-size: 1.25rem;
+    line-height: inherit;
+    white-space: nowrap;
+    margin: auto !important;
+    padding: 10px;
+    padding-bottom: 0;
+
+}
 .navbar-nav {
   display: flex;
   flex-direction: column;
@@ -13244,6 +13251,12 @@ fieldset:disabled .wizard > .actions a,
   flex-grow: 1;
   align-items: center;
 }
+.sidebar-mini{
+  right:0 !important;
+  left:0 !important;
+  position: fixed !important;
+  top: -19px !important;
+  }
 
 .navbar-toggler {
   padding: 0.25rem 0.75rem;
@@ -17220,7 +17233,8 @@ fieldset:disabled .wizard > .actions a,
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)) !important;
 }
-
+.bg-light1{ background-color: #dc143c !important;
+}
 .bg-dark, .settings-panel .color-tiles .tiles.dark {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-dark-rgb), var(--bs-bg-opacity)) !important;
