--- a/src/App.css
+++ b/src/App.css
@@ -261,7 +261,7 @@ border-radius: 5px;
   width: 280px;
   min-height: 100vh;
   /* box-shadow: 0px 4px 8px rgb(0 0 0 / 16%); */
-  background-color: #f4f5f7;
+  /* background-color: #f4f5f7; */
   /* position: fixed; */
   top: 0;
   left: -100%;
