--- a/src/css/vertical-layout-dark/style.css
+++ b/src/css/vertical-layout-dark/style.css
@@ -13082,15 +13082,26 @@ fieldset:disabled .wizard > .actions a,
   justify-content: space-between;
 }
 
-.navbar-brand {
+/* .navbar-brand {
   padding-top: 0.3125rem;
   padding-bottom: 0.3125rem;
   margin-right: 1rem;
   font-size: 1.25rem;
   text-decoration: none;
   white-space: nowrap;
+} */
+.navbar-brand {
+  display: inline-block;
+  /* padding-top: 0; */
+  /* padding-bottom: 0.3125rem; */
+  /* margin-right: 1rem; */
+  font-size: 1.25rem;
+  line-height: inherit;
+  white-space: nowrap;
+  margin: auto;
+  padding: 10px;
+  padding-bottom: 0;
 }
-
 .navbar-nav {
   display: flex;
   flex-direction: column;
@@ -13118,7 +13129,12 @@ fieldset:disabled .wizard > .actions a,
   flex-grow: 1;
   align-items: center;
 }
-
+.sidebar-mini{
+  right:0 !important;
+  left:0 !important;
+  position: fixed !important;
+  top: -19px !important;
+  }
 .navbar-toggler {
   padding: 0.25rem 0.75rem;
   font-size: 1.25rem;
