--- a/src/css/vertical-layout-light/New folder/style.css
+++ b/src/css/vertical-layout-light/New folder/style.css
@@ -13181,15 +13181,27 @@ fieldset:disabled .wizard > .actions a,
   justify-content: space-between;
 }
 
-.navbar-brand {
+/* .navbar-brand {
   padding-top: 0.3125rem;
   padding-bottom: 0.3125rem;
   margin-right: 1rem;
   font-size: 1.25rem;
   text-decoration: none;
   white-space: nowrap;
+} */
+.navbar-brand {
+  display: inline-block;
+  /* padding-top: 0; */
+  /* padding-bottom: 0.3125rem; */
+  /* margin-right: 1rem; */
+  font-size: 1.25rem;
+  line-height: inherit;
+  white-space: nowrap;
+  margin: auto;
+  padding: 10px;
+  padding-bottom: 0;
+  
 }
-
 .navbar-nav {
   display: flex;
   flex-direction: column;
