--- a/src/css/vertical-layout-light/_allform.scss
+++ b/src/css/vertical-layout-light/_allform.scss
@@ -62,12 +62,16 @@ a:focus {
     height: auto;
 }
 
+// .allform-logo-div {
+//     width: 168px;
+//     height: auto;
+//     margin: auto;
+// }
 .allform-logo-div {
-    width: 168px;
+    width: 185px;
     height: auto;
     margin: auto;
 }
-
 /* ---------------------------------------------------
     SIDEBAR STYLE
 ----------------------------------------------------- */
@@ -134,6 +138,8 @@ a:focus {
     font-size: 15px;
     font-weight: 500;
     text-transform: uppercase;
+    padding-left: 12px;
+    padding-top: 12px;
 }
 
 #sidebars ul li a:hover {
@@ -170,7 +176,7 @@ a:focus {
     color: rgb(10, 21, 81) !important;
     font-size: 15px;
     display: inline-block !important;
-    padding: 1em 0.75em !important;
+    // padding: 1em 0.75em !important;
     font-weight: 500 !important;
     pointer-events: auto;
     opacity: 1;
@@ -268,10 +274,14 @@ ul.CTAs a {
 .formlink {
     display: inline-block;
     list-style: none;
-}
 
+}
+.allform-nav-formlink{
+    padding-top: 12px;
+}
 .navform .button-dropdown {
     position: relative;
+    top: -4px;
 }
 
 .navform li .drop {
@@ -682,11 +692,21 @@ ul.CTAs a {
 }
 
 @media (max-width: 480px) {
-
+    .formlink{
+        margin-top: 4px;
+    }
+    .navbar-allform-nav {
+        justify-content: space-around;
+    }
+    .navform .button-dropdown{
+        top: 0;
+    }
     .allform-navbar {
         display: none !important;
     }
-
+.desktop-navall-form{
+    display: none !important;
+}
     .all-form-sidebars {
         display: none !important;
     }
@@ -703,5 +723,8 @@ ul.CTAs a {
 
     .nav-allform-mobile {
         display: block;
+    }
+    .sidebar-offcanvas{
+        background-color: #F4F5F7;
     }
 }
