fix issues of issue--sheet

--- a/src/css/vertical-layout-light/_Preview.scss
+++ b/src/css/vertical-layout-light/_Preview.scss
@@ -403,7 +403,11 @@
 }
 .login-btn-width{
   width: 94%;
-  margin-right: 26px;
+  // margin-right: 26px;
+}
+.login-btn-width:focus {
+  box-shadow: none !important;
+  border: none !important;
 }
 .formpage_first_div{
  margin-left: 40px;
