create form ui issue fix

--- a/src/css/vertical-layout-light/_setting.scss
+++ b/src/css/vertical-layout-light/_setting.scss
@@ -634,7 +634,7 @@ body {
   width: 39px;
   padding: 7px;
   text-align: center;
-  background: rgb(88, 185, 102);
+  background: #dc143c;
   color: white;
   border-radius: 3px;
 }
@@ -692,9 +692,11 @@ body {
   background-color: transparent;
   outline: 0;
 }
+
 .form-setting-input:focus {
   border: 2px solid black !important;
 }
+
 .mainsetting-div {
   padding: 12px 27px 12px 26px;
 }
@@ -753,7 +755,7 @@ body {
 }
 
 .class_g {
-  background-color: green;
+  background-color: #dc143c;
   height: 40px;
   width: 40px;
   display: flex;
@@ -881,9 +883,9 @@ body {
   border-radius: 100%;
 }
 
-.heading {
-  color: #4811df;
-  margin-left: 5px;
+.heading_css {
+  color: #dc143c !important;
+  margin-left: 5px !important;
 }
 
 .succes {
@@ -962,10 +964,6 @@ body {
 .border-setup {
   height: 42px;
   width: 0.5px;
-}
-
-.conduct {
-  background-color: #0a1551;
 }
 
 .shown {
@@ -1130,6 +1128,7 @@ body {
   background-color: #fff;
   outline: 0;
 }
+
 .condition-first-input:focus {
   border: 2px solid black !important;
 }
@@ -1148,14 +1147,17 @@ body {
   width: 100%;
   margin-left: 108px;
 }
+
 .show_field_option {
   width: 100%;
   margin-left: 80px;
 }
+
 .show_field_page {
   width: 100%;
   margin-left: 84px;
 }
+
 .date_schedule {
   border: 1px solid #ced4da;
   border-radius: 4px;
@@ -1163,10 +1165,19 @@ body {
   box-shadow: none;
   overflow: hidden;
   text-align: left;
-  padding: 6px 6px 6px 10px; 
+  padding: 6px 6px 6px 10px;
 }
+
 .select_dark {
   background: rgb(30, 40, 61) !important;
   border: 1px solid #fff !important;
   color: #fff !important;
+}
+
+.border-theme {
+  border: 1px solid #dc143c !important;
+}
+
+.bg-icon-color {
+  background-color: #dc143c !important;
 }
